chore/use-transations-on-inserts (#47)
